--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
     "@csstools/normalize.css": "^12.0.0",
+    "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
